# claimvault

./: .editorconfig  .env.example  .gitattributes  .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: a0c2e1b8d051_domain_models.py  d3f4e1c7b2a0_domain_rework.py  e4a5b6c7d8e9_evidence_ingestion.py  f6d9402682da_baseline.py  f7a8b9c0d1e2_counterparty_profile_details.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/v1/: __init__.py  claims.py  deps.py
apps/api/app/api/v1/routers/: __init__.py  auth.py  cases.py  claims.py  counterparties.py  health.py  search.py
apps/api/app/core/: config.py  db.py  logger.py  paths.py
apps/api/app/db/: __init__.py  session.py
apps/api/app/models/: __init__.py  claim.py
apps/api/app/schemas/: audit.py  auth.py  case.py  case_summary.py  claim.py  counterparty.py  evidence.py  export.py  readiness.py  search.py  timeline.py
apps/api/app/services/: __init__.py  audit_service.py  auth_service.py  case_assistant_service.py  case_lifecycle_service.py  case_service.py  case_state_machine.py  case_summary_service.py  claim_service.py  counterparty_service.py  evidence_service.py  export_service.py  packager.py  readiness_service.py  search_service.py  summary_builder.py  timeline_service.py  workflow_pack_service.py
apps/api/app/storage/: __init__.py  base.py  export.py  local.py
apps/api/app/workflow/: packs.py
apps/api/tests/: conftest.py  test_auth.py  test_cases.py  test_claims.py  test_counterparty_profiles.py  test_evidence_extraction.py  test_exports.py  test_health.py  test_models.py  test_readiness.py  test_search.py  test_summary.py  test_version.py
apps/web/: .env.example  README.md  next-env.d.ts  next.config.js  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/cases/: CaseDetailContent.tsx  layout.tsx  page.tsx
apps/web/app/cases/[id]/: page.tsx
apps/web/app/components/: Loader.tsx  StatusMessage.tsx
apps/web/app/lib/: session.ts
apps/web/app/lib/api/: client.ts
apps/web/app/login/: page.tsx
apps/web/app/register/: page.tsx
apps/web/styles/: globals.css
docs/: BOOTSTRAP.md  CASE_LIFECYCLE.md  DEV_SETUP.md  DOMAIN_MODEL.md  ENVIRONMENT.md  GOVERNANCE.md  JUGGERNAUT_VISION.md  MVP_CHECKLIST.md  NON_GOALS.md  POSITIONING.md  QUICKSTART.md  ROADMAP.md  SECURITY_MODEL.md  USE_CASES.md  WORKFLOW_PACKS.md  architecture.md  product.md
scripts/: bootstrap.ps1  bootstrap.sh  check_imports.py
(+1 files in other folders)
