[project]
name = "claimvault-api"
version = "0.1.0"
description = "FastAPI backend for ClaimVault"
readme = "README.md"
authors = [
  { name = "Parad0x Labs" }
]
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.106,<0.110",
  "uvicorn[standard]>=0.23,<0.24",
  "sqlmodel>=0.0.8,<0.1",
  "alembic>=2.0,<3",
  "python-dotenv>=1.0,<2",
  "pydantic>=2.8,<3",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.0.291,<1",
  "pytest>=7.0,<8",
  "pytest-asyncio>=0.22,<0.25",
]

[tool.ruff]
line-length = 100
target-version = ["py312"]
exclude = ["__pycache__", ".venv", "build", "dist"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
