[project]
name = "claimvault-api"
version = "0.1.0"
description = "FastAPI backend for ClaimVault"
readme = "README.md"
authors = [
  { name = "Parad0x Labs" }
]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.23,<0.24",
  "sqlmodel>=0.0.8,<0.1",
  "alembic>=1.10,<2",
  "python-dotenv>=1.0,<2",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "platformdirs>=3.0,<4",
  "passlib[bcrypt]>=1.7,<2",
  "python-jose[cryptography]>=3.3,<4",
  "argon2-cffi>=23,<24",
  "email-validator>=2.1,<3",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.0.291,<1",
  "pytest>=7.2,<8",
  "pytest-asyncio>=0.22,<0.25",
  "httpx>=0.26,<0.30",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["__pycache__", ".venv", "build", "dist"]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
